--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "startDev": "nodemon server.js"
+    "startDev": "nodemon server.js --inspect",
+    "startAuthDev": "nodemon authServer.js --inspect"
   },
   "author": "",
   "license": "ISC",
